--- a/Expand_ai_problem_1.ipynb
+++ b/Expand_ai_problem_1.ipynb
@@ -1973,7 +1973,7 @@
         "  print('*****'*8)\n",
         "  print('*****'*8)\n",
         "  print('PERFORMACE ON THE TEST SET')\n",
-        "  print(f'validation_accuracy: {validation_accuracy*100} %,  val_macro_f1_score: {val_macro_f1_score*100} %,  val_micro_f1_score: {val_micro_f1_score*100} %')\n",
+        "  print(f'validation_accuracy: {validation_accuracy*100} %,  val_macro_f1_score: {val_macro_f1_score},  val_micro_f1_score: {val_micro_f1_score}')\n",
         "\n",
         "\n",
         "\n",
