--- a/Expand_ai_problem_1.ipynb
+++ b/Expand_ai_problem_1.ipynb
@@ -285,7 +285,7 @@
       "source": [
         "# Mount the drive on Google Colab"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -302,7 +302,7 @@
         "!pip install wandb\n",
         "!pip install torchkeras"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -455,7 +455,7 @@
       "source": [
         ""
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -482,7 +482,7 @@
         "from torch.utils.data import Dataset, DataLoader\n",
         "from torchvision import transforms, datasets\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -498,7 +498,7 @@
         "# check if cuda is available\n",
         "torch.cuda.is_available()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -523,7 +523,7 @@
         "# set seed to reproduce results\n",
         "np.random.seed(42)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -539,7 +539,7 @@
         "# initialize wandb for logging\n",
         "!wandb login"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -566,7 +566,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +587,7 @@
         "data_path = '/content/drive/MyDrive/data/diseases_copy4'\n",
         "CLASSES = [\"COVID\", \"NORMAL\", \"PNEUMONIA\"]\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -633,7 +633,7 @@
         "assert len(train_list_images) == train_data_len\n",
         "assert len(test_list_images) == test_data_len"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -807,7 +807,7 @@
         "\n",
         "print(f'Train and test data paths are {train_data_path} and {test_data_path} respectively')"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -844,7 +844,7 @@
         "    ]\n",
         ")"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -858,7 +858,7 @@
         "ds_train = datasets.ImageFolder(str(train_data_path), transform = train_transform, target_transform = lambda t:torch.tensor(t).long())\n",
         "ds_test = datasets.ImageFolder(str(test_data_path), transform = test_transform, target_transform = lambda t: torch.tensor(t).long())"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -874,7 +874,7 @@
         "# Class labels\n",
         "print(ds_train.class_to_idx)"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,7 +904,7 @@
         "model_name = 'densenet121'\n",
         "\n"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -931,7 +931,7 @@
         "\n",
         "}"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -944,7 +944,7 @@
         "dl_train = DataLoader(ds_train, batch_size=batch_size, shuffle=True, pin_memory=True)\n",
         "dl_test = DataLoader(ds_test, batch_size=batch_size, shuffle=True, pin_memory=True)"
       ],
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -974,7 +974,7 @@
         "  ax.set_yticks([])\n",
         "plt.show()"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1027,7 +1027,7 @@
         "# efficient net model -> https://github.com/lukemelas/EfficientNet-PyTorch\n",
         "!pip install efficientnet_pytorch"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1059,7 +1059,7 @@
         "else:\n",
         "  model = EfficientNet.from_pretrained(model_name)\n"
       ],
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1082,7 +1082,7 @@
       "source": [
         "model"
       ],
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1613,7 +1613,7 @@
         "else:\n",
         "  model.fc = nn.Linear(model_dict[model_name], num_classes)"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1626,7 +1626,7 @@
         "if torch.cuda.is_available():\n",
         "  model.to(device)"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1640,7 +1640,7 @@
         "\n",
         "# summary(model, (3, 256, 256))"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1753,7 +1753,7 @@
         "\n",
         "        return f1_score"
       ],
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1770,7 +1770,7 @@
         "model.macro_f1_score = F1Score(average='macro')\n",
         "model.micro_f1_score = F1Score(average='micro')"
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1791,7 +1791,7 @@
         "  print(labels.shape)\n",
         "  break"
       ],
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1842,7 +1842,7 @@
         "\n",
         "  return loss.item(), accuracy, macro_f1_score.item(), micro_f1_score.item()\n"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1879,7 +1879,7 @@
         "\n",
         "  return loss.item(), accuracy, macro_f1_score.item(), micro_f1_score.item()\n"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1888,6 +1888,8 @@
         "id": "JzFPzeakkZzH"
       },
       "source": [
+        "%%wandb \n",
+        "\n",
         "def train_model(model, dl_train, dl_test, epochs, log_freq):\n",
         "  print('********Training has started***************')\n",
         "\n",
@@ -1979,7 +1981,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2033,7 +2035,7 @@
         "  wandb.finish()\n",
         "\n"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
