--- a/Expand_ai_problem_1.ipynb
+++ b/Expand_ai_problem_1.ipynb
@@ -15,7 +15,6 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
         "f1a7e195070b409d8aa28be6cdcfe95d": {
@@ -300,7 +299,8 @@
       "source": [
         "# install weights and biases, and torchkeras library\n",
         "!pip install wandb\n",
-        "!pip install torchkeras"
+        "!pip install torchkeras\n",
+        "!pip install gdown"
       ],
       "execution_count": null,
       "outputs": [
@@ -533,11 +533,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y75APLCg5OfZ",
+        "cellView": "form",
         "outputId": "374f3eb1-717e-4280-e043-1f495bbda047"
       },
       "source": [
+        "#@title\n",
         "# initialize wandb for logging\n",
-        "!wandb login"
+        "!wandb login 202040aaac395bbf5a4a47d433a5335b74b7fb0e"
       ],
       "execution_count": null,
       "outputs": [
@@ -562,9 +564,12 @@
         "outputId": "3fc80d78-38b3-43dd-d1d7-cfe0c30bf515"
       },
       "source": [
-        "# mounting Google Drive\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "# Download the data\n",
+        "\n",
+        "!FILEID='1PVJcXmKz-QPAvPV-rRFYnjh7BsFnAeq8' && \\\n",
+        "FILENAME='diseases.zip' && \\\n",
+        "FILEDEST=\"https://docs.google.com/uc?export=download&id=${FILEID}\" && \\\n",
+        "wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate ${FILEDEST} -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=${FILEID}\" -O $FILENAME && rm -rf /tmp/cookies.txt"
       ],
       "execution_count": null,
       "outputs": [
